--- a/css/style.css
+++ b/css/style.css
@@ -110,11 +110,48 @@ body {
   grid-column: full-start/ col-end 6;
   background-image: linear-gradient(rgba(16, 29, 44, 0.93), rgba(16, 29, 44, 0.93)), url("../img/hero.jpeg");
   background-size: cover;
-  background-position: center; }
+  background-position: center;
+  padding: 8rem;
+  padding-top: 4rem;
+  display: grid;
+  grid-template-rows: 1fr min-content 6rem 1fr;
+  grid-template-columns: max-content;
+  grid-row-gap: 1.5rem;
+  justify-content: center; }
   .header__logo {
-    height: 3rem; }
-  .header__seenon-logos img {
-    height: 2.5rem; }
+    height: 3rem;
+    justify-self: center; }
+  .header__btn {
+    align-self: start;
+    justify-self: start; }
+  .header__seenon-text {
+    display: grid;
+    grid-template-columns: 1fr max-content 1fr;
+    align-items: center;
+    font-size: 1.4rem;
+    color: #aaa; }
+    .header__seenon-text::before {
+      content: "";
+      background-color: #aaa;
+      width: 100%;
+      height: 1px;
+      display: block;
+      margin-left: -1rem; }
+    .header__seenon-text::after {
+      content: "";
+      background-color: #aaa;
+      width: 100%;
+      height: 1px;
+      display: block;
+      margin-left: 1rem; }
+  .header__seenon-logos {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    grid-gap: 3rem; }
+    .header__seenon-logos img {
+      height: 2.5rem;
+      filter: brightness(70%); }
 
 .realtors {
   background-color: #101d2c;
