--- a/css/style.css
+++ b/css/style.css
@@ -155,7 +155,30 @@ body {
 
 .realtors {
   background-color: #101d2c;
-  grid-column: col-start 7 / full-end; }
+  grid-column: col-start 7 / full-end;
+  padding: 10rem;
+  display: grid;
+  grid-row-gap: 3rem;
+  grid-template-rows: 1fr;
+  align-items: end;
+  padding-bottom: 15rem; }
+
+.realtor {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: max-content 1fr;
+  align-items: center;
+  justify-content: center;
+  grid-column-gap: 2rem; }
+  .realtor__heading {
+    justify-self: center; }
+  .realtor__img {
+    width: 7rem;
+    border-radius: 50%; }
+  .realtor__text {
+    color: #f9f7f6; }
+    .realtor__text p {
+      color: #6d5d4b; }
 
 .features {
   grid-column: center-start/center-end;
