--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -1,4 +1,34 @@
 .realtors {
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
+  padding: 10rem;
+  display: grid;
+  grid-row-gap: 3rem;
+  grid-template-rows: 1fr;
+  align-items: end;
+  padding-bottom: 15rem;
+}
+
+.realtor {
+  display: grid;
+
+  grid-template-rows: 1fr;
+  grid-template-columns: max-content 1fr;
+  align-items: center;
+  justify-content: center;
+  grid-column-gap: 2rem;
+  &__heading {
+    justify-self: center;
+  }
+  &__img {
+    width: 7rem;
+    border-radius: 50%;
+  }
+
+  &__text {
+    color: $color-grey-light-1;
+    p {
+      color: $color-grey-dark-2;
+    }
+  }
 }
