--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 75em) {
+    html {
+      font-size: 50%; } }
 
 body {
   font-family: "Nunito", sans-serif;
@@ -19,6 +22,13 @@ body {
   display: grid;
   grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
   grid-template-columns: [sidebar-start] 8rem [sidebar-end full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; }
+  @media only screen and (max-width: 75em) {
+    .container {
+      grid-template-rows: 6rem 80vh min-content 40vw repeat(3, min-content);
+      grid-template-columns: [full-start] minmax(6rem, 1fr) [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] minmax(6rem, 1fr) [full-end]; } }
+  @media only screen and (max-width: 50em) {
+    .container {
+      grid-template-rows: 6rem calc(100vh - 6rem) min-content min-content 40vw repeat(3, min-content); } }
 
 .heading-1, .heading-2, .heading-3, .heading-4 {
   font-family: "Josefin Sans", sans-serif;
@@ -85,6 +95,11 @@ body {
   grid-row: 1/-1;
   display: flex;
   justify-content: center; }
+  @media only screen and (max-width: 75em) {
+    .sidebar {
+      grid-column: 1/-1;
+      grid-row: 1/2;
+      justify-content: start; } }
 
 .nav-btn {
   border: none;
@@ -94,6 +109,11 @@ body {
   height: 2px;
   margin-top: 4rem;
   position: fixed; }
+  @media only screen and (max-width: 75em) {
+    .nav-btn {
+      margin-top: 2.6rem;
+      margin-left: 2rem;
+      position: relative; } }
   .nav-btn::before, .nav-btn::after {
     content: "";
     background-color: #fff;
@@ -114,10 +134,13 @@ body {
   padding: 8rem;
   padding-top: 4rem;
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
   justify-content: center; }
+  @media only screen and (max-width: 50em) {
+    .header {
+      grid-column: 1/-1; } }
   .header__logo {
     height: 3rem;
     justify-self: center; }
@@ -148,9 +171,11 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     justify-items: center;
+    align-items: center;
     grid-gap: 3rem; }
     .header__seenon-logos img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brightness(70%); }
 
 .realtors {
@@ -162,6 +187,14 @@ body {
   grid-template-rows: 1fr;
   align-items: end;
   padding-bottom: 15rem; }
+  @media only screen and (max-width: 50em) {
+    .realtors {
+      grid-column: 1/-1;
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: repeat(3, 1fr);
+      padding: 4rem;
+      align-items: center;
+      grid-row-gap: 1rem; } }
 
 .realtor {
   display: grid;
@@ -170,8 +203,14 @@ body {
   align-items: center;
   justify-content: center;
   grid-column-gap: 2rem; }
+  @media only screen and (max-width: 50em) {
+    .realtor {
+      grid-template-columns: repeat(4, max-content); } }
   .realtor__heading {
     justify-self: center; }
+    @media only screen and (max-width: 50em) {
+      .realtor__heading {
+        grid-column: 1/-1; } }
   .realtor__img {
     width: 7rem;
     border-radius: 50%; }
@@ -206,16 +245,26 @@ body {
   background-color: #c69963;
   grid-column: full-start/col-end 4;
   background-image: linear-gradient(rgba(198, 153, 99, 0.5), rgba(198, 153, 99, 0.5)), url(../img/back.jpg);
+  background-size: cover;
   display: grid;
   grid-template-rows: repeat(6, 1fr);
   grid-template-columns: repeat(6, 1fr);
   align-items: center; }
+  @media only screen and (max-width: 50em) {
+    .story__pictures {
+      grid-column: 1/-1;
+      padding: 4rem; } }
 
 .story__img--1 {
   width: 100%;
   grid-row: 2/6;
   grid-column: 2/6;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.1); }
+  @media only screen and (max-width: 50em) {
+    .story__img--1 {
+      grid-column: 1/5;
+      grid-row: 1/-1;
+      height: 100%; } }
 
 .story__img--2 {
   width: 115%;
@@ -223,6 +272,10 @@ body {
   grid-row: 4/6;
   grid-column: 4 / 7;
   box-shadow: 0 2rem 5rem rgba(0, 0, 0, 0.2); }
+  @media only screen and (max-width: 50em) {
+    .story__img--2 {
+      grid-row: 3/-1;
+      width: 100%; } }
 
 .story__content {
   background-color: #f9f7f6;
@@ -232,6 +285,10 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start; }
+  @media only screen and (max-width: 50em) {
+    .story__content {
+      grid-column: 1 / -1;
+      grid-row: 5/6; } }
 
 .story__text {
   font-size: 1.5rem;
