--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -7,6 +7,15 @@
   grid-template-rows: 1fr;
   align-items: end;
   padding-bottom: 15rem;
+  @media only screen and (max-width: $bp-medium) {
+    grid-column: 1/-1;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
+    padding: 4rem;
+    align-items: center;
+
+    grid-row-gap: 1rem;
+  }
 }
 
 .realtor {
@@ -17,8 +26,15 @@
   align-items: center;
   justify-content: center;
   grid-column-gap: 2rem;
+
+  @media only screen and (max-width: $bp-medium) {
+    grid-template-columns: repeat(4, max-content);
+  }
   &__heading {
     justify-self: center;
+    @media only screen and (max-width: $bp-medium) {
+      grid-column: 1/-1;
+    }
   }
   &__img {
     width: 7rem;
