--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -4,11 +4,23 @@
   grid-row: 1/-1;
   display: flex;
   justify-content: center;
+
+  @media only screen and (max-width: $bp-largest) {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    justify-content: start;
+  }
 }
 
 .nav-btn {
   border: none;
   border-radius: 0;
+
+  @media only screen and (max-width: $bp-largest) {
+    margin-top: 2.6rem;
+    margin-left: 2rem;
+    position: relative;
+  }
 
   background-color: #fff;
   width: 4.5rem;
