--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,10 @@ body {
       padding: 4rem;
       align-items: center;
       grid-row-gap: 1rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .realtors {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, 1fr); } }
 
 .realtor {
   display: grid;
@@ -206,6 +210,9 @@ body {
   @media only screen and (max-width: 50em) {
     .realtor {
       grid-template-columns: repeat(4, max-content); } }
+  @media only screen and (max-width: 37.5em) {
+    .realtor {
+      padding: 0.5rem; } }
   .realtor__heading {
     justify-self: center; }
     @media only screen and (max-width: 50em) {
@@ -215,6 +222,7 @@ body {
     width: 7rem;
     border-radius: 50%; }
   .realtor__text {
+    align-self: center;
     color: #f9f7f6; }
     .realtor__text p {
       color: #6d5d4b; }
@@ -254,6 +262,9 @@ body {
     .story__pictures {
       grid-column: 1/-1;
       padding: 4rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .story__pictures {
+      margin-top: 21rem; } }
 
 .story__img--1 {
   width: 100%;
@@ -289,6 +300,9 @@ body {
     .story__content {
       grid-column: 1 / -1;
       grid-row: 5/6; } }
+  @media only screen and (max-width: 37.5em) {
+    .story__content {
+      padding: 21rem 8vw; } }
 
 .story__text {
   font-size: 1.5rem;
