--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -16,6 +16,11 @@
 
     grid-row-gap: 1rem;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
+  }
 }
 
 .realtor {
@@ -30,6 +35,11 @@
   @media only screen and (max-width: $bp-medium) {
     grid-template-columns: repeat(4, max-content);
   }
+
+  @media only screen and (max-width: $bp-small) {
+    padding: 0.5rem;
+  }
+
   &__heading {
     justify-self: center;
     @media only screen and (max-width: $bp-medium) {
@@ -42,6 +52,7 @@
   }
 
   &__text {
+    align-self: center;
     color: $color-grey-light-1;
     p {
       color: $color-grey-dark-2;
