--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -18,6 +18,10 @@
       padding: 4rem;
       // grid-row: 2/3;
     }
+
+    @media only screen and (max-width: $bp-small) {
+      margin-top: 21rem;
+    }
   }
 
   &__img {
@@ -59,6 +63,9 @@
     @media only screen and (max-width: $bp-medium) {
       grid-column: 1 / -1;
       grid-row: 5/6;
+    }
+    @media only screen and (max-width: $bp-small) {
+      padding: 21rem 8vw;
     }
   }
 
