--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -6,6 +6,10 @@
   grid-template-rows: repeat(7, 5vw);
   grid-gap: 1.5rem;
   padding: 1.5rem;
+  @media only screen and (max-width: $bp-small) {
+    grid-gap: 0.5rem;
+    padding: 0.5rem;
+  }
 
   &__item {
     &--1 {
